--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://author-p130360-e1272151.adobeaemcloud.com/bin/franklin.delivery/adobe-rnd/aem-boilerplate-xwalk/main"
+    url: "https://author-p7603-e12698.adobeaemcloud.com/bin/franklin.delivery/coatpont/xwalk/main"
     type: "markup"
     suffix: ".html"
